--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
 	<description>Bonus project for DBMS</description>
 	<properties>
 		<java.version>11</java.version>
-<!--		<tomcat.version>9.0.5</tomcat.version>-->
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.release>11</maven.compiler.release>
 	</properties>
 	<dependencies>
 		<dependency>
